# neocities

./: .gitignore  compile.sh  gen_games.sh  gen_posts.sh  genhtml.sh  index.html  package-lock.json  package.json  readme.md
.github/workflows/: neocities.yml
beppe_online/: Cargo.toml  index.html
beppe_online/src/: basic.frag  basic.vert  lib.rs
days/: 16-06-24.html
notes/: my_art.md  pico8.md
public/: .index.html.swp  .main.css.swp  art.html  gaming.html  home.html  index.html  main.css  menu.html  qr.html
public/days/: 16-06-24.html
public/games/: lou.html  lou.js
