[package]
name = "beppe_online"
version = "0.1.0"
edition = "2021"
authors = ["Beppe Vanrolleghem beppe.vanrolleghem@gmail.com"]
description = "Testing out wasm"

[lib]
crate-type = ["cdylib"]



[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]
